--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="alarm_permission_required_message"><![CDATA[QRAlarm needs an “Alarms & reminders” special app access to schedule alarms that can be fired at exact times. The access is revoked and thus must be granted via system settings.]]></string>
     <string name="later">Later</string>
     <string name="settings">Settings</string>
+    <string name="camera_permission_required_title">Camera permission required</string>
+    <string name="camera_permission_required_message">QRAlarm needs access to Your phone’s camera in order to scan for QR Codes to disable alarms. Without this permission the app can not work properly.</string>
+    <string name="allow">Allow</string>
+    <string name="camera_permission_revoked_message">Camera permission has been permanently revoked. Without it QRAlarm can not work properly. In order to fix it, go to settings and allow QRAlarm to use phone’s camera.</string>
 </resources>
