--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="alarm_notification_text_snooze">Snooze over! Go and scan Your QR Code!</string>
     <string name="alarm_at">Alarm set at:</string>
     <string name="set_alarm">Set alarm time:</string>
+    <string name="snooze_duration">Snooze duration in minutes</string>
+    <string name="number_of_snoozes">Max number of snoozes</string>
 </resources>
