--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="set_alarm">Set alarm time:</string>
     <string name="snooze_duration">Snooze duration in minutes</string>
     <string name="number_of_snoozes">Max number of snoozes</string>
+    <string name="alarm_sound">Alarm sound</string>
+    <string name="default_system">Default system</string>
+    <string name="gentle_guitar">Gentle guitar</string>
+    <string name="alarm_clock">Alarm clock</string>
+    <string name="air_horn">Air horn</string>
 </resources>
