--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,10 @@
     <string name="gentle_guitar">Gentle guitar</string>
     <string name="alarm_clock">Alarm clock</string>
     <string name="air_horn">Air horn</string>
+    <string name="save_default_qrcode">Download default QR Code</string>
+    <string name="storage_permission_required_title">Storage permission required</string>
+    <string name="storage_permission_required_message">QRAlarm needs access to Your phone’s storage in order to download a default QR Code that after being scanned will turn off alarms.</string>
+    <string name="storage_permission_revoked_message">Storage permission has been permanently revoked. Without it QRAlarm can not download a default QR Code that after being scanned will turn off alarms. In order to fix it, go to settings and allow QRAlarm to use phone’s storage.</string>
+    <string name="saved_default_qrcode">Downloaded default QR Code!</string>
+    <string name="not_saved_default_qrcode">Failed to download the default QR Code...</string>
 </resources>
