--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="gentle_guitar">Gentle guitar</string>
     <string name="alarm_clock">Alarm clock</string>
     <string name="air_horn">Air horn</string>
+    <string name="user_alarm_file">Custom File</string>
     <string name="save_default_qrcode">Download default QR Code</string>
     <string name="storage_permission_required_title">Storage permission required</string>
     <string name="storage_permission_required_message">QRAlarm needs access to Your phone’s storage in order to download a default QR Code that after being scanned will turn off alarms.</string>
