--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="notifications_permission_required_title">Notifications permission required</string>
     <string name="notifications_permission_required_message">QRAlarm needs the permission to post notifications when the alarm goes off. Without it the alarm will not be accompanied by the notification.</string>
     <string name="notifications_permission_revoked_message">Notifications permission has been permanently revoked. Without it the alarm is not accompanied by the notification. Go to settings and allow QRAlarm to post notifications.</string>
+    <string name="gentle_wakeup_in_seconds">Gentle wake up in seconds</string>
 </resources>
