--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="drag_to_set_alarm">Drag to set alarm time:</string>
     <string name="snooze_duration">Snooze duration in minutes</string>
     <string name="number_of_snoozes">Max number of snoozes</string>
-    <string name="dismiss_without_code_before_alarm">Easily dismiss alarm without scan before alarm goes off</string>
+    <string name="require_scan_before_alarm">Require scan to cancel alarm before it goes off</string>
+    <string name="accept_any_barcode">Accept any barcode</string>
     <string name="alarm_sound">Alarm sound</string>
     <string name="default_system">Default system</string>
     <string name="gentle_guitar">Gentle guitar</string>
