--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,21 +20,28 @@
     <string name="alarm_notification_text_snooze">Snooze over! Go and scan Your QR Code!</string>
     <string name="alarm_at">Alarm set at:</string>
     <string name="drag_to_set_alarm">Drag to set alarm time:</string>
-    <string name="snooze_duration">Snooze duration in minutes</string>
-    <string name="number_of_snoozes">Max number of snoozes</string>
-    <string name="accept_qr_and_bar_codes">Accept both QR and Barcodes</string>
+    <string name="snooze_duration_setting_title">Snooze duration</string>
+    <string name="snooze_duration_setting_description">Set the duration of all snoozes in minutes</string>
+    <string name="snooze_number_setting_title">Snooze number</string>
+    <string name="snooze_number_setting_description">Set the number of available snoozes</string>
+    <string name="gentle_wakeup_setting_title">Gentle wake up</string>
+    <string name="gentle_wakeup_setting_description">Set the duration in seconds of alarm volume increase</string>
+    <string name="accept_all_codes_setting_title">Accept all codes</string>
+    <string name="accept_all_codes_setting_description">The app will scan for both QR Codes and Barcodes</string>
     <string name="alarm_sound">Alarm sound</string>
     <string name="default_system">Default system</string>
     <string name="gentle_guitar">Gentle guitar</string>
     <string name="alarm_clock">Alarm clock</string>
     <string name="air_horn">Air horn</string>
-    <string name="save_default_qrcode">Download default QR Code</string>
+    <string name="download_code_title">Download code</string>
+    <string name="download_code_description">Download the default QR code image to gallery</string>
     <string name="storage_permission_required_title">Storage permission required</string>
     <string name="storage_permission_required_message">QRAlarm needs access to Your phone’s storage in order to download a default QR Code that after being scanned will turn off alarms.</string>
     <string name="storage_permission_revoked_message">Storage permission has been permanently revoked. Without it QRAlarm can not download a default QR Code that after being scanned will turn off alarms. In order to fix it, go to settings and allow QRAlarm to use phone’s storage.</string>
     <string name="saved_default_qrcode">Downloaded default QR Code!</string>
     <string name="not_saved_default_qrcode">Failed to download the default QR Code…</string>
-    <string name="scan_custom_code">Scan custom code</string>
+    <string name="scan_new_code_title">Scan new code</string>
+    <string name="scan_new_code_description">Scan your own code for it be used to turn off alarms</string>
     <string name="it_is_ok">It\'s OK</string>
     <string name="again">Again</string>
     <string name="new_code_added_title">New code added</string>
@@ -42,7 +49,8 @@
     <string name="current_dismiss_code">Current dismiss code: \"%1$s\"</string>
     <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
     <string name="alarm_set">Alarm set</string>
-    <string name="qralarm_guide">QRAlarm Guide</string>
+    <string name="qralarm_guide_title">QRAlarm Guide</string>
+    <string name="qralarm_guide_description">Check how to use and ensure stability of  the application</string>
     <string name="guide">Guide</string>
     <string name="get_your_qrcode">Get Your QR Code</string>
     <string name="download_or_scan_code_description">QRAlarm lets You set alarms that can be turned off by scanning a QR Code. This can not be just any QR Code! Before You set up Your first alarm, You should Download a default Code Image from the Settings. In case You already have Your own QR Code then scan it - QR Alarm will remember it for You and will use it to cancel Your alarms! Note, that You can also enable the Barcodes support in the Settings.</string>
@@ -59,7 +67,6 @@
     <string name="notifications_permission_required_title">Notifications permission required</string>
     <string name="notifications_permission_required_message">QRAlarm needs the permission to post notifications when the alarm goes off. Without it the alarm will not be accompanied by the notification.</string>
     <string name="notifications_permission_revoked_message">Notifications permission has been permanently revoked. Without it the alarm is not accompanied by the notification. Go to settings and allow QRAlarm to post notifications.</string>
-    <string name="gentle_wakeup_in_seconds">Gentle wake up in seconds</string>
     <string name="disabling_barcodes_title">Disabling Barcodes</string>
     <string name="disabling_barcodes_message">You are trying to disable Barcodes support. If Your dismiss code is tied to a previously scanned Barcode You won\'t be able to dismiss future alarms! Are You sure You want to proceed?</string>
     <string name="yes">Yes</string>
