Quick-fix for the task-affinity and activity trampoline notification restriction - now instead of trying to launch MainActivity on 'Cancel the alarm' notification action, the app will show the Toast message with appropriate instructions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="cancel_alarm">Cancel the alarm</string>
     <string name="no_code_cancel_setting_title">No-code cancel</string>
     <string name="no_code_cancel_setting_description">Cancel alarm without code if it is in more than 1 hour</string>
+    <string name="alarm_in_less_than_1h_cancel_by_scanning">Alarm in less than 1 hour. Cancel by scanning the code!</string>
 </resources>
